--- a/Main_project/nbproject/project.properties
+++ b/Main_project/nbproject/project.properties
@@ -75,7 +75,7 @@ main.class=main_project.Main_project
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_21
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
