--- a/Main_project/nbproject/private/private.properties
+++ b/Main_project/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\kitti\\AppData\\Roaming\\NetBeans\\20\\build.properties
