--- a/Main_project/nbproject/project.properties
+++ b/Main_project/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Main_project
+application.vendor=kitti
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,13 @@ dist.jar=${dist.dir}/Main_project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Main_project
+endorsed.classpath=
 excludes=
+file.reference.mariadb-java-client-2.4.1.jar=C:\\Users\\kitti\\Downloads\\mariadb-java-client-2.4.1.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mariadb-java-client-2.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
