fix: Remove Main_Project/dist from gitignore.

--- a/Main_project/nbproject/private/private.properties
+++ b/Main_project/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.mariadb-java-client-2.4.1.jar-1=C:\\Users\\kitti\\Desktop\\T-Rex-Flowchart\\Main_project\\mariadb-java-client-3.3.3.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
