feat: DBconnect to frontend.

--- a/Main_project/nbproject/project.properties
+++ b/Main_project/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Main_project
 endorsed.classpath=
 excludes=
+file.reference.json-20240303.jar=json-20240303.jar
 file.reference.mariadb-java-client-3.3.3.jar=mariadb-java-client-3.3.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.3.3.jar}
+    ${file.reference.mariadb-java-client-3.3.3.jar}:\
+    ${file.reference.json-20240303.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
