--- a/problemPanel/nbproject/project.properties
+++ b/problemPanel/nbproject/project.properties
@@ -35,11 +35,15 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/OOP
 endorsed.classpath=
 excludes=
+file.reference.json-20240303.jar=..\\Main_project\\json-20240303.jar
 file.reference.mariadb-java-client-3.3.3.jar=C:\\Users\\User\\Downloads\\mariadb-java-client-3.3.3.jar
+file.reference.mariadb-java-client-3.3.3.jar-1=..\\Main_project\\mariadb-java-client-3.3.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mariadb-java-client-3.3.3.jar}
+    ${file.reference.mariadb-java-client-3.3.3.jar}:\
+    ${file.reference.mariadb-java-client-3.3.3.jar-1}:\
+    ${file.reference.json-20240303.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
