--- a/problemPanel/nbproject/private/private.properties
+++ b/problemPanel/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\kitti\\AppData\\Roaming\\NetBeans\\20\\build.properties
